# pycompile

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  src.benchmark.html  src.cli.benchmark_cmd.html  src.cli.compile_cmd.html  src.cli.dry_run_cmd.html  src.cli.entrypoint.html  src.cli.html  src.compiler_handler.html  src.file_handler.html  src.helpers.html  src.html  src.logging_setup.html  src.wrappers.html
.doctrees/: environment.pickle  index.doctree  modules.doctree  src.benchmark.doctree  src.cli.benchmark_cmd.doctree  src.cli.compile_cmd.doctree  src.cli.doctree  src.cli.dry_run_cmd.doctree  src.cli.entrypoint.doctree  src.compiler_handler.doctree  src.doctree  src.file_handler.doctree  src.helpers.doctree  src.logging_setup.doctree  src.wrappers.doctree
.github/workflows/: docs.yaml  main.yaml  publish.yaml  test.yaml
_sources/: src.cli.benchmark_cmd.rst.txt  src.cli.compile_cmd.rst.txt  src.cli.dry_run_cmd.rst.txt  src.cli.entrypoint.rst.txt  src.cli.rst.txt  src.compiler_handler.rst.txt  src.file_handler.rst.txt  src.helpers.rst.txt  src.logging_setup.rst.txt  src.rst.txt  src.wrappers.rst.txt
demo/something_else/: 1.py  some_module.py
docs/: Makefile  conf.py  index.rst  src.benchmark.rst
examples/: fib.py  harmonic.py  test_examples.py
examples/harmonic_mean/: main.py
src/: __init__.py  benchmark.py  cli.py  compiler_handler.py  compilers.py  file_handler.py  helpers.py  logging.py  logging_setup.py  wrappers.py
src/cli/: benchmark_cmd.py  compile_cmd.py  dry_run_cmd.py  entrypoint.py
src/examples/: examples_benchmark.py  fib.py  harmonic.py  sum.py  sum_of_sqaures.py  test_fib.py  test_harmonic_mean.py  test_sum.py  test_sum_of_sqaures.py
tests/: conftest.py  fakes.py  test_cli.py  test_compilers.py
tests/integration/: test_compiler_handler.py
tests/unit/: test_benchmark.py  test_cli.py  test_compiler_handler.py  test_compilers.py
