[tool.poetry]
name = "pycompile"
version = "0.1.3"
description = "A CLI tool for compiling python"
authors = ["iplitharas <johnplitharas@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">3.8"                       # MIT
click = "^8.1.3"                      # BSD-3-Clause
tqdm = "^4.64.1"                      # MIT
cython = "^0.29.33"                   # Apache
nuitka = "^1.4.8"                     # Apache 2.0
pytest-benchmark = "^4.0.0"           # BSD-2-Clause


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"                    # MIT
black = "^23.1.0"                    # MIT
pylint = "^2.16.2"                   # GPL v2
isort = "^5.12.0"                    # MIT
pytest-cov = "^4.0.0"                # MIT
pre-commit = "^3.1.0"                # MIT
ipython = "^8.10.0"                  # BSD-3-Clause

[build-system]
requires = [ "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pycompile = "src.cli:main"


[tool.black]
line-length = 80
target-version = ["py38", "py39"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 80
skip = [".gitignore", ".dockerignore" ,".env"]







