[tool.poetry]
name = "pycompile"
version = "0.1.11"
description = "A CLI tool for compiling python"
authors = ["iplitharas <johnplitharas@gmail.com>"]
homepage = "https://github.com/iplitharas/pycompile"
repository = "https://github.com/iplitharas/pycompile"
documentation = "https://iplitharas.github.io/pycompile/"
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10"                     # MIT
click = "^8.1.3"                      # BSD-3-Clause
tqdm = "^4.64.1"                      # MIT
cython = "^0.29.33"                   # Apache
nuitka = "^1.4.8"                     # Apache 2.0
pytest-benchmark = "^4.0.0"           # BSD-2-Clause
memory-profiler = "^0.61.0"           # BSD


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"                    # MIT
black = "^23.1.0"                    # MIT
pylint = "^2.16.2"                   # GPL v2
isort = "^5.12.0"                    # MIT
pytest-cov = "^4.0.0"                # MIT
pre-commit = "^3.1.0"                # MIT
ipython = "^8.10.0"                  # BSD-3-Clause
mypy = "^1.4.1"                      # MIT
types-tqdm = "^4.65.0.1"             # Apache 2.0
sphinx = "^7.0.1"                    # BSD
furo = "^2023.5.20"                  # MIT
myst-parser = "^2.0.0"               # MIT

[build-system]
requires = [ "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pycompile = "src.cli.entrypoint:main"


[tool.black]
line-length = 80
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 80
skip = [".gitignore", ".dockerignore" ,".env"]


[tool.mypy]
python_version = "3.10"
strict_optional = true
strict = true











