[tool.poetry]
name = "pycompile"
version = "0.2.2"
description = "A CLI tool for compiling python"
authors = ["iplitharas <johnplitharas@gmail.com>"]
homepage = "https://github.com/iplitharas/pycompile"
repository = "https://github.com/iplitharas/pycompile"
documentation = "https://iplitharas.github.io/pycompile/"
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10"                     # MIT
cython = "^3.0.0"                     # Apache
nuitka = ">=1.7.5,<3.0.0"             # Apache 2.0
click = "^8.1.3"                      # BSD-3-Clause
tqdm = "^4.64.1"                      # MIT
pytest-benchmark = "^4.0.0"           # BSD-2-Clause
memory-profiler = "^0.61.0"           # BSD


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"                    # MIT
black = "^23.1.0"                    # MIT
pylint = ">=2.16.2,<4.0.0"           # GPL v2
isort = "^5.12.0"                    # MIT
pytest-cov = "^4.0.0"                # MIT
pre-commit = "^3.1.0"                # MIT
ipython = "^8.10.0"                  # BSD-3-Clause
mypy = "^1.4.1"                      # MIT
types-tqdm = "^4.65.0.1"             # Apache 2.0
sphinx = "^7.0.1"                    # BSD
furo = "^2023.5.20"                  # MIT
myst-parser = "^2.0.0"               # MIT
nbsphinx = "^0.9.3"
sphinx-copybutton = "^0.5.2"
recommonmark = "^0.7.1"
commitizen = "^3.12.0"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = [ "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pycompile = "src.cli.entrypoint:main"


[tool.black]
line-length = 80
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 80
skip = [".gitignore", ".dockerignore" ,".env"]


[tool.mypy]
python_version = "3.10"
strict_optional = true
strict = true
